2010-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/DebuggerSession.cs:
	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs: Added the
	  SetBreakEventStatus method, which can be used by subclasses
	  to set a breakpoint as invalid. Added some docs.

2010-02-02  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/NRefactoryResolverVisitor.cs:
	  Properly resolve type references.

2010-02-02  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs: Fix type
	  arg count code.

2010-01-22  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* Mono.Debugging.csproj:
	* Mono.Debugging.Client/StackFrame.cs:
	* Mono.Debugging.Client/DebuggerSession.cs:
	* Mono.Debugging.Client/EvaluationOptions.cs:
	* Mono.Debugging.Evaluation/NRefactoryEvaluator.cs:
	* Mono.Debugging.Evaluation/NRefactoryResolverVisitor.cs: Add
	  suport for an external type resolver. The first time an
	  expression is evaluated in a context, the debugger tries to
	  resolve the type references using the external resolver, and
	  will use the resolved expression to do the evaluation.

	* Mono.Debugging.Client/SourceLocation.cs: Add column field.

	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs: Added
	  method for forcing the loading of a type.

2010-01-22  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs: Generate
	  NotSupported values when getting such exception.

2010-01-20  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* mono.debugging.snk:
	* Mono.Debugging.csproj: Sign and fix deps.

2010-01-20  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/NRefactoryEvaluator.cs: Fix
	  potential string parsing issue. Fixes bug #571232 -
	  System.FormatException: Input string was not in a correct
	  format.

2009-12-18  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.Debugging.Client/DebuggerSession.cs: Workaround for
	  possible deadlock.
